Initial port to 1.16 (2.2) (working, but many bugs)
Took 361 hours 59 minutes

Took 3 minutes