@@ -3,13 +3,14 @@ package dev.momostudios.coldsweat.api.registry;
 import dev.momostudios.coldsweat.ColdSweat;
 import dev.momostudios.coldsweat.api.temperature.block_temp.BlockTemp;
 import dev.momostudios.coldsweat.api.temperature.block_temp.BlockTempConfig;
-import net.minecraft.core.BlockPos;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.block.Block;
+import net.minecraft.block.BlockState;
+import net.minecraft.entity.LivingEntity;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.World;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class BlockTempRegistry
 {
@@ -18,7 +19,7 @@ public class BlockTempRegistry
     public static final BlockTemp DEFAULT_BLOCK_TEMP = new BlockTemp()
     {
         @Override
-        public double getTemperature(Level level, LivingEntity entity, BlockState state, BlockPos pos, double distance)
+        public double getTemperature(World world, LivingEntity entity, BlockState state, BlockPos pos, double distance)
         {   return 0;
         }
     };
@@ -30,23 +31,26 @@ public class BlockTempRegistry
             List<BlockTemp> blockTemps = MAPPED_BLOCKS.get(block);
             if (blockTemps != null)
             {
-                if (blockTemp instanceof BlockTempConfig cfg)
+                if (blockTemp instanceof BlockTempConfig)
                 {
+                    BlockTempConfig cfg = (BlockTempConfig) blockTemp;
                     for (BlockTemp temp : blockTemps)
                     {
-                        if (temp instanceof BlockTempConfig cfg2)
-                        {   if (cfg2.comparePredicates(cfg))
-                        {   ColdSweat.LOGGER.error("Skipping duplicate BlockTemp for \"" + block.getName().getString() + "\" as it already has one with the same predicates: \n"
-                                                           + cfg2.getPredicates());
-                            return;
-                        }
+                        if (temp instanceof BlockTempConfig)
+                        {
+                            BlockTempConfig cfg2 = (BlockTempConfig) temp;
+                            if (cfg2.comparePredicates(cfg))
+                            {   ColdSweat.LOGGER.error("Skipping duplicate BlockTemp for \"" + block.getName().getString() + "\" as it already has one with the same predicates: \n"
+                                                               + cfg2.getPredicates());
+                                return;
+                            }
                         }
                     }
                 }
                 blockTemps.add(blockTemp);
             }
             else
-            {   MAPPED_BLOCKS.put(block, new ArrayList<>(List.of(blockTemp)));
+            {   MAPPED_BLOCKS.put(block, new ArrayList<>(Arrays.asList(blockTemp)));
             }
         });
         BLOCK_TEMPS.add(blockTemp);
@@ -59,12 +63,12 @@ public class BlockTempRegistry
 
     public static List<BlockTemp> getBlockTempsFor(BlockState blockstate)
     {
-        if (blockstate.isAir()) return List.of(DEFAULT_BLOCK_TEMP);
+        if (blockstate.isAir()) return Arrays.asList(DEFAULT_BLOCK_TEMP);
 
         Block block = blockstate.getBlock();
         List<BlockTemp> blockTemps = MAPPED_BLOCKS.get(block);
         if (blockTemps == null)
-        {   blockTemps = new ArrayList<>(BLOCK_TEMPS.stream().filter(bt -> bt.hasBlock(block)).toList());
+        {   blockTemps = new ArrayList<>(BLOCK_TEMPS.stream().filter(bt -> bt.hasBlock(block)).collect(Collectors.toList()));
             MAPPED_BLOCKS.put(block, blockTemps);
             return blockTemps;
         }
