@@ -8,15 +8,18 @@ import dev.momostudios.coldsweat.core.network.message.ClientConfigAskMessage;
 import dev.momostudios.coldsweat.util.ClientOnlyHelper;
 import dev.momostudios.coldsweat.util.math.CSMath;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.components.*;
-import net.minecraft.client.gui.screens.OptionsScreen;
-import net.minecraft.network.chat.CommonComponents;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.client.gui.DialogTexts;
+import net.minecraft.client.gui.screen.OptionsScreen;
+import net.minecraft.client.gui.widget.button.AbstractButton;
+import net.minecraft.client.gui.widget.button.ImageButton;
+import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.client.event.ScreenEvent;
+import net.minecraftforge.client.event.GuiScreenEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.client.gui.widget.Slider;
 import net.minecraftforge.fml.common.Mod;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
@@ -28,28 +31,28 @@ public class DrawConfigButton
     public static boolean DRAW_CONTROLS = false;
 
     @SubscribeEvent
-    public static void eventHandler(ScreenEvent.InitScreenEvent event)
+    public static void eventHandler(GuiScreenEvent.InitGuiEvent event)
     {
-        if (event.getScreen() instanceof OptionsScreen && ClientSettingsConfig.getInstance().isConfigButtonEnabled())
+        if (event.getGui() instanceof OptionsScreen && ClientSettingsConfig.getInstance().isConfigButtonEnabled())
         {
             // The offset from the config
             Supplier<List<? extends Integer>> buttonPos = () -> ClientSettingsConfig.getInstance().getConfigButtonPos();
             AtomicInteger buttonX = new AtomicInteger(buttonPos.get().get(0));
             AtomicInteger buttonY = new AtomicInteger(buttonPos.get().get(1));
-            int screenWidth = event.getScreen().width;
-            int screenHeight = event.getScreen().height;
+            int screenWidth = event.getGui().width;
+            int screenHeight = event.getGui().height;
 
             if (buttonX.get() < -1 || buttonY.get() < -1)
             {   buttonX.set(0);
                 buttonY.set(0);
-                ClientSettingsConfig.getInstance().setConfigButtonPos(List.of(0, 0));
+                ClientSettingsConfig.getInstance().setConfigButtonPos(Arrays.asList(0, 0));
                 ClientSettingsConfig.getInstance().save();
             }
 
             // Main config button
-            ImageButton mainButton = new ImageButton(event.getScreen().width / 2 - 183 + buttonX.get(), event.getScreen().height / 6 + 110 + buttonY.get(),
-                                     24, 24, 0, 40, 24,
-                                     new ResourceLocation("cold_sweat:textures/gui/screen/config_gui.png"),
+            ImageButton mainButton = new ImageButton(event.getGui().width / 2 - 183 + buttonX.get(), event.getGui().height / 6 + 110 + buttonY.get(),
+                                                     24, 24, 0, 40, 24,
+                                                     new ResourceLocation("cold_sweat:textures/gui/screen/config_gui.png"),
                                      button ->
                                      {
                                          if (!Minecraft.getInstance().isLocalServer() && Minecraft.getInstance().player != null)
@@ -58,15 +61,15 @@ public class DrawConfigButton
                                          else ClientOnlyHelper.openConfigScreen();
                                      });
             // Add main button
-            event.addListener(mainButton);
+            event.addWidget(mainButton);
 
             // Reconfigure the options screen with controls for the position of the config button
             if (DRAW_CONTROLS)
             {
-                int buttonStartX = event.getScreen().width / 2 - 183;
-                int buttonStartY = event.getScreen().height / 6 + 110;
+                int buttonStartX = event.getGui().width / 2 - 183;
+                int buttonStartY = event.getGui().height / 6 + 110;
                 Runnable saveAndClamp = () ->
-                {   ClientSettingsConfig.getInstance().setConfigButtonPos(List.of(buttonX.get(), buttonY.get()));
+                {   ClientSettingsConfig.getInstance().setConfigButtonPos(Arrays.asList(buttonX.get(), buttonY.get()));
                     ClientSettingsConfig.getInstance().save();
                     buttonX.set(CSMath.clamp(buttonX.get(), -buttonStartX, screenWidth - mainButton.getWidth() - buttonStartX));
                     buttonY.set(CSMath.clamp(buttonY.get(), -buttonStartY, screenHeight - mainButton.getHeight() - buttonStartY));
@@ -75,12 +78,13 @@ public class DrawConfigButton
 
                 AtomicReference<AbstractButton> doneButtonAtomic = new AtomicReference<>(null);
                 // Disable all other buttons
-                event.getScreen().children().forEach(child ->
+                event.getGui().children().forEach(child ->
                 {
                     // Don't disable "Done" button
-                    if (child instanceof AbstractButton button)
+                    if (child instanceof AbstractButton)
                     {
-                        boolean isDoneButton = button.getMessage().getString().equals(CommonComponents.GUI_DONE.getString());
+                        AbstractButton button = (AbstractButton) child;
+                        boolean isDoneButton = button.getMessage().getString().equals(DialogTexts.GUI_DONE.getString());
                         if (!isDoneButton)
                             button.active = false;
                         else
@@ -88,8 +92,8 @@ public class DrawConfigButton
                             button.setWidth(button.getWidth() - 72);
                         }
                     }
-                    if (child instanceof SliderButton slider)
-                    {   slider.active = false;
+                    if (child instanceof Slider)
+                    {   ((Slider) child).active = false;
                     }
                 });
 
@@ -104,7 +108,7 @@ public class DrawConfigButton
                                          saveAndClamp.run();
                                      });
                 // Add left button
-                event.addListener(leftButton);
+                event.addWidget(leftButton);
 
                 // Create "up" button
                 ImageButton upButton = new ImageButton(leftButton.x + leftButton.getWidth(), leftButton.y, 20, 10, 14, 0, 20,
@@ -114,7 +118,7 @@ public class DrawConfigButton
                                          saveAndClamp.run();
                                      });
                 // Add up button
-                event.addListener(upButton);
+                event.addWidget(upButton);
 
                 // Create "down" button
                 ImageButton downButton = new ImageButton(upButton.x, upButton.y + upButton.getHeight(), 20, 10, 14, 10, 20,
@@ -124,7 +128,7 @@ public class DrawConfigButton
                                          saveAndClamp.run();
                                      });
                 // Add down button
-                event.addListener(downButton);
+                event.addWidget(downButton);
 
                 // Create "right" button
                 ImageButton rightButton = new ImageButton(upButton.x + upButton.getWidth(), upButton.y, 14, 20, 34, 0, 20,
@@ -134,7 +138,7 @@ public class DrawConfigButton
                                          saveAndClamp.run();
                                      });
                 // Add right button
-                event.addListener(rightButton);
+                event.addWidget(rightButton);
 
                 // Create "reset" button
                 ImageButton resetButton = new ImageButton(rightButton.x + rightButton.getWidth() + 2, rightButton.y, 20, 20, 48, 0, 20,
@@ -145,7 +149,7 @@ public class DrawConfigButton
                                          saveAndClamp.run();
                                      });
                 // Add reset button
-                event.addListener(resetButton);
+                event.addWidget(resetButton);
 
                 TaskScheduler.scheduleClient(() -> DRAW_CONTROLS = false, 1);
             }
