@@ -1,7 +1,8 @@
 package dev.momostudios.coldsweat.client.renderer.animation;
 
+import dev.momostudios.coldsweat.client.renderer.model.ModelPart;
 import dev.momostudios.coldsweat.util.math.CSMath;
-import net.minecraft.client.model.geom.ModelPart;
+import net.minecraft.client.renderer.model.ModelRenderer;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -22,7 +23,7 @@ public class Animation
         this.rotKeyframes = new ArrayList<>(rotFrames);
     }
 
-    public Animation setRotations(float time, ModelPart part, boolean offset)
+    public Animation setRotations(float time, ModelRenderer part, boolean offset)
     {
         if (rotKeyframes.isEmpty()) return this;
 
@@ -47,7 +48,7 @@ public class Animation
         return this;
     }
 
-    public Animation setPositions(float time, ModelPart part, boolean offset)
+    public Animation setPositions(float time, ModelRenderer part, boolean offset)
     {
         if (posKeyframes.isEmpty()) return this;
 
@@ -96,19 +97,6 @@ public class Animation
     @Override
     public String toString()
     {
-        return """
-                Animation{
-                    partName: %s,
-                    duration: %s,
-                    offset: %s,
-                    positions:
-                    {
-                        %s,
-                    }
-                    rotations
-                    {
-                        %s,
-                    }
-                }""".formatted(partName, duration, offsetAmount, posKeyframes, rotKeyframes);
+        return String.format("Animation{ partName: %s, duration: %s, offset: %s, positions: { %s } rotations { %s } }", partName, duration, offsetAmount, posKeyframes, rotKeyframes);
     }
 }
