@@ -18,13 +18,6 @@ public class Keyframe
     @Override
     public String toString()
     {
-        return """
-                {
-                    "time": %s,
-                    "x": %s,
-                    "y": %s,
-                    "z": %s
-                }
-                """.formatted(time, x, y, z);
+        return String.format("{ time : %s, x: %s, y: %s, z: %s }", time, x, y, z);
     }
 }
