@@ -3,18 +3,19 @@ package dev.momostudios.coldsweat.common.capability;
 import com.mojang.datafixers.util.Pair;
 import dev.momostudios.coldsweat.config.ConfigSettings;
 import dev.momostudios.coldsweat.util.math.CSMath;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.world.item.ItemStack;
+import net.minecraft.item.ItemStack;
+import net.minecraft.nbt.CompoundNBT;
+import net.minecraft.nbt.ListNBT;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class ItemInsulationCap implements IInsulatableCap
 {
     private final List<Pair<ItemStack, List<InsulationPair>>> insulation = new ArrayList<>();
 
     int saveCooldown = 0;
-    CompoundTag savedTag = new CompoundTag();
+    CompoundNBT savedTag = new CompoundNBT();
 
     @Override
     public List<Pair<ItemStack, List<InsulationPair>>> getInsulation()
@@ -99,8 +100,9 @@ public class ItemInsulationCap implements IInsulatableCap
             List<InsulationPair> list = entry.getSecond();
             for (InsulationPair pair : list)
             {
-                if (pair instanceof AdaptiveInsulation insul)
+                if (pair instanceof AdaptiveInsulation)
                 {
+                    AdaptiveInsulation insul = (AdaptiveInsulation) pair;
                     double factor = insul.getFactor();
                     double adaptSpeed = insul.getSpeed();
 
@@ -123,11 +125,11 @@ public class ItemInsulationCap implements IInsulatableCap
         {
             Pair<Double, Double> insulConfig = ConfigSettings.ADAPTIVE_INSULATION_ITEMS.get().get(stack.getItem());
             if (insulConfig != null)
-            {   this.insulation.add(Pair.of(stack, new ArrayList<>(List.of(new AdaptiveInsulation(insulConfig.getFirst(), 0d, insulConfig.getSecond())))));
+            {   this.insulation.add(Pair.of(stack, new ArrayList<>(Arrays.asList(new AdaptiveInsulation(insulConfig.getFirst(), 0d, insulConfig.getSecond())))));
             }
         }
         else if (ConfigSettings.INSULATION_ITEMS.get().containsKey(stack.getItem()))
-        {   this.insulation.add(Pair.of(stack, new ArrayList<>(List.of(new Insulation(ConfigSettings.INSULATION_ITEMS.get().get(stack.getItem()))))));
+        {   this.insulation.add(Pair.of(stack, new ArrayList<>(Arrays.asList(new Insulation(ConfigSettings.INSULATION_ITEMS.get().get(stack.getItem()))))));
         }
         this.calculateInsulation();
     }
@@ -154,7 +156,7 @@ public class ItemInsulationCap implements IInsulatableCap
     }
 
     @Override
-    public CompoundTag serializeNBT()
+    public CompoundNBT serializeNBT()
     {
         // For some reason Forge runs this every tick,
         // so we store the last-saved tag and return it
@@ -165,27 +167,27 @@ public class ItemInsulationCap implements IInsulatableCap
         }
 
         // Save the insulation items
-        ListTag insulNBT = new ListTag();
+        ListNBT insulNBT = new ListNBT();
         // Iterate over insulation items
         for (Pair<ItemStack, List<InsulationPair>> entry : insulation)
         {
-            CompoundTag entryNBT = new CompoundTag();
+            CompoundNBT entryNBT = new CompoundNBT();
             List<InsulationPair> pairList = entry.getSecond();
             // Store ItemStack data
-            entryNBT.put("Item", entry.getFirst().save(new CompoundTag()));
+            entryNBT.put("Item", entry.getFirst().save(new CompoundNBT()));
 
-            ListTag pairListNBT = new ListTag();
+            ListNBT pairListNBT = new ListNBT();
             // Store insulation values for the item
             for (InsulationPair pair : pairList)
             {
-                CompoundTag pairTag = new CompoundTag();
-                if (pair instanceof Insulation insul)
-                {
+                CompoundNBT pairTag = new CompoundNBT();
+                if (pair instanceof Insulation)
+                {   Insulation insul = (Insulation) pair;
                     pairTag.putDouble("Cold", insul.getCold());
                     pairTag.putDouble("Hot", insul.getHot());
                 }
-                else if (pair instanceof AdaptiveInsulation insul)
-                {
+                else if (pair instanceof AdaptiveInsulation)
+                {   AdaptiveInsulation insul = (AdaptiveInsulation) pair;
                     pairTag.putDouble("Amount", insul.getInsulation());
                     pairTag.putDouble("Factor", insul.getFactor());
                     pairTag.putDouble("Speed", insul.getSpeed());
@@ -198,7 +200,7 @@ public class ItemInsulationCap implements IInsulatableCap
             insulNBT.add(entryNBT);
         }
 
-        CompoundTag tag = new CompoundTag();
+        CompoundNBT tag = new CompoundNBT();
         if (!insulNBT.isEmpty())
             tag.put("Insulation", insulNBT);
         else
@@ -210,25 +212,25 @@ public class ItemInsulationCap implements IInsulatableCap
     }
 
     @Override
-    public void deserializeNBT(CompoundTag tag)
+    public void deserializeNBT(CompoundNBT tag)
     {
         this.insulation.clear();
 
         // Load the insulation items
-        ListTag insulNBT = tag.getList("Insulation", 10);
+        ListNBT insulNBT = tag.getList("Insulation", 10);
 
         // Iterate over insulation items
         for (int i = 0; i < insulNBT.size(); i++)
         {
-            CompoundTag entryNBT = insulNBT.getCompound(i);
+            CompoundNBT entryNBT = insulNBT.getCompound(i);
             ItemStack stack = ItemStack.of(entryNBT.getCompound("Item"));
             List<InsulationPair> pairList = new ArrayList<>();
-            ListTag pairListNBT = entryNBT.getList("Values", 10);
+            ListNBT pairListNBT = entryNBT.getList("Values", 10);
 
             // Iterate over insulation values for the item
             for (int j = 0; j < pairListNBT.size(); j++)
             {
-                CompoundTag pairTag = pairListNBT.getCompound(j);
+                CompoundNBT pairTag = pairListNBT.getCompound(j);
                 if (pairTag.contains("Cold"))
                 {
                     double cold = pairTag.getDouble("Cold");
@@ -250,23 +252,23 @@ public class ItemInsulationCap implements IInsulatableCap
         this.calculateInsulation();
     }
 
-    public CompoundTag serializeSimple(ItemStack stack)
+    public CompoundNBT serializeSimple(ItemStack stack)
     {
-        CompoundTag tag = stack.getOrCreateTag();
-        ListTag insulTag = new ListTag();
+        CompoundNBT tag = stack.getOrCreateTag();
+        ListNBT insulTag = new ListNBT();
 
-        for (List<InsulationPair> pairList : this.insulation.stream().map(Pair::getSecond).toList())
+        for (List<InsulationPair> pairList : this.insulation.stream().map(Pair::getSecond).collect(Collectors.toList()))
         {
             for (InsulationPair pair : pairList)
             {
-                CompoundTag compound = new CompoundTag();
-                if (pair instanceof Insulation insul)
-                {
+                CompoundNBT compound = new CompoundNBT();
+                if (pair instanceof Insulation)
+                {   Insulation insul = (Insulation) pair;
                     compound.putDouble("Cold", insul.getCold());
                     compound.putDouble("Hot", insul.getHot());
                 }
-                else if (pair instanceof AdaptiveInsulation insul)
-                {
+                else if (pair instanceof AdaptiveInsulation)
+                {   AdaptiveInsulation insul = (AdaptiveInsulation) pair;
                     compound.putDouble("Insulation", insul.getInsulation());
                     compound.putDouble("Factor", insul.getFactor());
                     compound.putDouble("Speed", insul.getSpeed());
@@ -287,7 +289,7 @@ public class ItemInsulationCap implements IInsulatableCap
         List<InsulationPair> pairs = stack.getOrCreateTag().getList("Insulation", 10).stream()
         .map(nbt ->
         {
-            CompoundTag compound = (CompoundTag) nbt;
+            CompoundNBT compound = (CompoundNBT) nbt;
 
             if (compound.contains("Cold"))
             {   return new Insulation(compound.getDouble("Cold"), compound.getDouble("Hot"));
@@ -304,23 +306,26 @@ public class ItemInsulationCap implements IInsulatableCap
     {
         pairs.sort(Comparator.comparingDouble(pair ->
         {
-            if (pair instanceof AdaptiveInsulation insul)
+            if (pair instanceof AdaptiveInsulation)
+            {   AdaptiveInsulation insul = (AdaptiveInsulation) pair;
                 return Math.abs(insul.getInsulation()) >= 2 ? 7 : 6;
-            else if (pair instanceof Insulation insul)
-            {
-                double abscold = Math.abs(insul.cold);
-                double abshot = Math.abs(insul.hot);
-                if (abscold >= 2 && abshot >= 2)
+            }
+            else if (pair instanceof Insulation)
+            {   Insulation insul = (Insulation) pair;
+
+                double absCold = Math.abs(insul.cold);
+                double absHot = Math.abs(insul.hot);
+                if (absCold >= 2 && absHot >= 2)
                     return 2;
-                else if (abscold >= 2)
+                else if (absCold >= 2)
                     return 0;
-                else if (abshot >= 2)
+                else if (absHot >= 2)
                     return 4;
-                else if (abscold >= 1 && abshot >= 1)
+                else if (absCold >= 1 && absHot >= 1)
                     return 3;
-                else if (abscold >= 1)
+                else if (absCold >= 1)
                     return 1;
-                else if (abshot >= 1)
+                else if (absHot >= 1)
                     return 5;
                 else
                     return 1;
