@@ -4,19 +4,20 @@ import com.mojang.datafixers.util.Pair;
 import dev.momostudios.coldsweat.api.util.Temperature;
 import dev.momostudios.coldsweat.util.compat.CompatManager;
 import dev.momostudios.coldsweat.config.util.ConfigHelper;
-import dev.momostudios.coldsweat.config.util.ValueSupplier;
+import dev.momostudios.coldsweat.config.util.ValueHolder;
 import dev.momostudios.coldsweat.util.math.CSMath;
+import dev.momostudios.coldsweat.util.serialization.Triplet;
+import net.minecraft.block.Block;
+import net.minecraft.item.Item;
 import net.minecraft.nbt.*;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.level.block.Block;
+import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.registries.ForgeRegistries;
-import oshi.util.tuples.Triplet;
 
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 /**
  * Holds almost all configs for Cold Sweat in memory for easy access.
@@ -24,64 +25,64 @@ import java.util.function.Supplier;
  */
 public class ConfigSettings
 {
-    public static final Map<String, ValueSupplier<?>> CONFIG_SETTINGS = new HashMap<>();
+    public static final Map<String, ValueHolder<?>> CONFIG_SETTINGS = new HashMap<>();
 
     public static Difficulty DEFAULT_DIFFICULTY = Difficulty.NORMAL;
 
     // Settings visible in the config screen
-    public static final ValueSupplier<Integer> DIFFICULTY;
-    public static final ValueSupplier<Double> MAX_TEMP;
-    public static final ValueSupplier<Double> MIN_TEMP;
-    public static final ValueSupplier<Double> TEMP_RATE;
-    public static final ValueSupplier<Boolean> FIRE_RESISTANCE_ENABLED;
-    public static final ValueSupplier<Boolean> ICE_RESISTANCE_ENABLED;
-    public static final ValueSupplier<Boolean> DAMAGE_SCALING;
-    public static final ValueSupplier<Boolean> REQUIRE_THERMOMETER;
-    public static final ValueSupplier<Integer> GRACE_LENGTH;
-    public static final ValueSupplier<Boolean> GRACE_ENABLED;
+    public static final ValueHolder<Integer> DIFFICULTY;
+    public static final ValueHolder<Double> MAX_TEMP;
+    public static final ValueHolder<Double> MIN_TEMP;
+    public static final ValueHolder<Double> TEMP_RATE;
+    public static final ValueHolder<Boolean> FIRE_RESISTANCE_ENABLED;
+    public static final ValueHolder<Boolean> ICE_RESISTANCE_ENABLED;
+    public static final ValueHolder<Boolean> DAMAGE_SCALING;
+    public static final ValueHolder<Boolean> REQUIRE_THERMOMETER;
+    public static final ValueHolder<Integer> GRACE_LENGTH;
+    public static final ValueHolder<Boolean> GRACE_ENABLED;
 
     // World Settings
-    public static final ValueSupplier<Map<ResourceLocation, Triplet<Double, Double, Temperature.Units>>> BIOME_TEMPS;
-    public static final ValueSupplier<Map<ResourceLocation, Triplet<Double, Double, Temperature.Units>>> BIOME_OFFSETS;
-    public static final ValueSupplier<Map<ResourceLocation, Double>> DIMENSION_TEMPS;
-    public static final ValueSupplier<Map<ResourceLocation, Double>> DIMENSION_OFFSETS;
-    public static final ValueSupplier<Double[]> SUMMER_TEMPS;
-    public static final ValueSupplier<Double[]> AUTUMN_TEMPS;
-    public static final ValueSupplier<Double[]> WINTER_TEMPS;
-    public static final ValueSupplier<Double[]> SPRING_TEMPS;
+    public static final ValueHolder<Map<ResourceLocation, Triplet<Double, Double, Temperature.Units>>> BIOME_TEMPS;
+    public static final ValueHolder<Map<ResourceLocation, Triplet<Double, Double, Temperature.Units>>> BIOME_OFFSETS;
+    public static final ValueHolder<Map<ResourceLocation, Double>> DIMENSION_TEMPS;
+    public static final ValueHolder<Map<ResourceLocation, Double>> DIMENSION_OFFSETS;
+    public static final ValueHolder<Double[]> SUMMER_TEMPS;
+    public static final ValueHolder<Double[]> AUTUMN_TEMPS;
+    public static final ValueHolder<Double[]> WINTER_TEMPS;
+    public static final ValueHolder<Double[]> SPRING_TEMPS;
 
     // Block settings
-    public static final ValueSupplier<Boolean> COLD_SOUL_FIRE;
-    public static final ValueSupplier<List<Block>> HEARTH_SPREAD_WHITELIST;
-    public static final ValueSupplier<List<Block>> HEARTH_SPREAD_BLACKLIST;
+    public static final ValueHolder<Boolean> COLD_SOUL_FIRE;
+    public static final ValueHolder<List<Block>> HEARTH_SPREAD_WHITELIST;
+    public static final ValueHolder<List<Block>> HEARTH_SPREAD_BLACKLIST;
 
     // Item settings
-    public static final ValueSupplier<Map<Item, Pair<Double, Double>>> INSULATION_ITEMS;
-    public static final ValueSupplier<Map<Item, Pair<Double, Double>>> ADAPTIVE_INSULATION_ITEMS;
-    public static final ValueSupplier<Map<Item, Pair<Double, Double>>> INSULATING_ARMORS;
-    public static final ValueSupplier<Integer[]> INSULATION_SLOTS;
-    public static final ValueSupplier<List<ResourceLocation>> INSULATION_BLACKLIST;
+    public static final ValueHolder<Map<Item, Pair<Double, Double>>> INSULATION_ITEMS;
+    public static final ValueHolder<Map<Item, Pair<Double, Double>>> ADAPTIVE_INSULATION_ITEMS;
+    public static final ValueHolder<Map<Item, Pair<Double, Double>>> INSULATING_ARMORS;
+    public static final ValueHolder<Integer[]> INSULATION_SLOTS;
+    public static final ValueHolder<List<ResourceLocation>> INSULATION_BLACKLIST;
 
-    public static final ValueSupplier<Boolean> CHECK_SLEEP_CONDITIONS;
+    public static final ValueHolder<Boolean> CHECK_SLEEP_CONDITIONS;
 
-    public static final ValueSupplier<Map<Item, Double>> FOOD_TEMPERATURES;
+    public static final ValueHolder<Map<Item, Double>> FOOD_TEMPERATURES;
 
-    public static final ValueSupplier<Integer> WATERSKIN_STRENGTH;
+    public static final ValueHolder<Integer> WATERSKIN_STRENGTH;
 
-    public static final ValueSupplier<Map<Item, Integer>> LAMP_FUEL_ITEMS;
+    public static final ValueHolder<Map<Item, Integer>> LAMP_FUEL_ITEMS;
 
-    public static final ValueSupplier<List<ResourceLocation>> LAMP_DIMENSIONS;
+    public static final ValueHolder<List<ResourceLocation>> LAMP_DIMENSIONS;
 
-    public static final ValueSupplier<Map<Item, Double>> BOILER_FUEL;
-    public static final ValueSupplier<Map<Item, Double>> ICEBOX_FUEL;
-    public static final ValueSupplier<Map<Item, Double>> HEARTH_FUEL;
-    public static final ValueSupplier<Boolean> HEARTH_POTIONS_ENABLED;
-    public static final ValueSupplier<List<ResourceLocation>> BLACKLISTED_POTIONS;
+    public static final ValueHolder<Map<Item, Double>> BOILER_FUEL;
+    public static final ValueHolder<Map<Item, Double>> ICEBOX_FUEL;
+    public static final ValueHolder<Map<Item, Double>> HEARTH_FUEL;
+    public static final ValueHolder<Boolean> HEARTH_POTIONS_ENABLED;
+    public static final ValueHolder<List<ResourceLocation>> BLACKLISTED_POTIONS;
 
     // Entity Settings
-    public static final ValueSupplier<Triplet<Integer, Integer, Double>> GOAT_FUR_TIMINGS;
-    public static final ValueSupplier<Map<ResourceLocation, Integer>> CHAMELEON_BIOMES;
-    public static final ValueSupplier<Map<ResourceLocation, Integer>> GOAT_BIOMES;
+    public static final ValueHolder<Triplet<Integer, Integer, Double>> LLAMA_FUR_TIMINGS;
+    public static final ValueHolder<Map<ResourceLocation, Integer>> CHAMELEON_BIOMES;
+    public static final ValueHolder<Map<ResourceLocation, Integer>> LLAMA_BIOMES;
 
 
     // Makes the settings instantiation collapsible & easier to read
@@ -141,7 +142,7 @@ public class ConfigSettings
 
         BIOME_OFFSETS = addSetting("biome_offsets", () -> ConfigHelper.getBiomesWithValues(WorldSettingsConfig.getInstance().getBiomeTempOffsets(), false));
 
-        DIMENSION_TEMPS = ValueSupplier.of(() ->
+        DIMENSION_TEMPS = ValueHolder.of(() ->
         {   Map<ResourceLocation, Double> map = new HashMap<>();
 
             for (List<?> entry : WorldSettingsConfig.getInstance().getDimensionTemperatures())
@@ -150,7 +151,7 @@ public class ConfigSettings
             return map;
         });
 
-        DIMENSION_OFFSETS = ValueSupplier.of(() ->
+        DIMENSION_OFFSETS = ValueHolder.of(() ->
         {   Map<ResourceLocation, Double> map = new HashMap<>();
 
             for (List<?> entry : WorldSettingsConfig.getInstance().getDimensionTempOffsets())
@@ -164,7 +165,7 @@ public class ConfigSettings
         HEARTH_FUEL = addSetting("hearth_fuel_items", () -> ConfigHelper.getItemsWithValues(ItemSettingsConfig.getInstance().getHearthFuelItems()));
 
         HEARTH_POTIONS_ENABLED = addSetting("hearth_potions_enabled", () -> ItemSettingsConfig.getInstance().arePotionsEnabled());
-        BLACKLISTED_POTIONS = addSetting("hearth_potion_blacklist", () -> ItemSettingsConfig.getInstance().getPotionBlacklist().stream().map(ResourceLocation::new).toList());
+        BLACKLISTED_POTIONS = addSetting("hearth_potion_blacklist", () -> ItemSettingsConfig.getInstance().getPotionBlacklist().stream().map(ResourceLocation::new).collect(Collectors.toList()));
 
         INSULATION_ITEMS = addSyncedSetting("insulation_items", () ->
         {
@@ -250,7 +251,7 @@ public class ConfigSettings
             return new Integer[] { list.get(0).intValue(), list.get(1).intValue(), list.get(2).intValue(), list.get(3).intValue() };
         },
         encoder ->
-        {   CompoundTag tag = new CompoundTag();
+        {   CompoundNBT tag = new CompoundNBT();
             tag.putInt("Head", encoder[0]);
             tag.putInt("Chest", encoder[1]);
             tag.putInt("Legs", encoder[2]);
@@ -264,7 +265,7 @@ public class ConfigSettings
         {   ItemSettingsConfig.getInstance().setArmorInsulationSlots(Arrays.asList(saver[0], saver[1], saver[2], saver[3]));
         });
 
-        INSULATION_BLACKLIST = addSetting("insulation_blacklist", () -> ItemSettingsConfig.getInstance().getInsulationBlacklist().stream().map(ResourceLocation::new).toList());
+        INSULATION_BLACKLIST = addSetting("insulation_blacklist", () -> ItemSettingsConfig.getInstance().getInsulationBlacklist().stream().map(ResourceLocation::new).collect(Collectors.toList()));
 
         CHECK_SLEEP_CONDITIONS = addSetting("check_sleep_conditions", () -> ColdSweatConfig.getInstance().isSleepChecked());
 
@@ -283,7 +284,7 @@ public class ConfigSettings
         },
         encoder ->
         {
-            CompoundTag tag = new CompoundTag();
+            CompoundNBT tag = new CompoundNBT();
             for (Map.Entry<Item, Integer> entry : encoder.entrySet())
             {
                 ResourceLocation itemID = ForgeRegistries.ITEMS.getKey(entry.getKey());
@@ -317,34 +318,34 @@ public class ConfigSettings
             ItemSettingsConfig.getInstance().setSoulLampFuelItems(list);
         });
 
-        LAMP_DIMENSIONS = addSetting("valid_lamp_dimensions", () -> ItemSettingsConfig.getInstance().getValidSoulLampDimensions().stream().map(ResourceLocation::new).toList());
+        LAMP_DIMENSIONS = addSetting("valid_lamp_dimensions", () -> ItemSettingsConfig.getInstance().getValidSoulLampDimensions().stream().map(ResourceLocation::new).collect(Collectors.toList()));
 
-        GOAT_FUR_TIMINGS = addSyncedSetting("goat_fur_timings", () ->
+        LLAMA_FUR_TIMINGS = addSyncedSetting("goat_fur_timings", () ->
         {
             List<?> entry = EntitySettingsConfig.getInstance().getGoatFurStats();
             return new Triplet<>(((Number) entry.get(0)).intValue(), ((Number) entry.get(1)).intValue(), ((Number) entry.get(2)).doubleValue());
         },
         triplet ->
         {
-            CompoundTag tag = new CompoundTag();
-            tag.put("Interval", IntTag.valueOf(triplet.getA()));
-            tag.put("Cooldown", IntTag.valueOf(triplet.getB()));
-            tag.put("Chance", DoubleTag.valueOf(triplet.getC()));
+            CompoundNBT tag = new CompoundNBT();
+            tag.put("Interval", IntNBT.valueOf(triplet.getFirst()));
+            tag.put("Cooldown", IntNBT.valueOf(triplet.getSecond()));
+            tag.put("Chance", DoubleNBT.valueOf(triplet.getThird()));
             return tag;
         },
-        tag ->
+                                             tag ->
         {
             int interval = tag.getInt("Interval");
             int cooldown = tag.getInt("Cooldown");
             double chance = tag.getDouble("Chance");
             return new Triplet<>(interval, cooldown, chance);
         },
-        triplet ->
+                                             triplet ->
         {
             List<Number> list = new ArrayList<>();
-            list.add(triplet.getA());
-            list.add(triplet.getB());
-            list.add(triplet.getC());
+            list.add(triplet.getFirst());
+            list.add(triplet.getSecond());
+            list.add(triplet.getThird());
             EntitySettingsConfig.getInstance().setGoatFurStats(list);
         });
 
@@ -358,7 +359,7 @@ public class ConfigSettings
             return map;
         });
 
-        GOAT_BIOMES = addSetting("goat_spawn_biomes", () ->
+        LLAMA_BIOMES = addSetting("goat_spawn_biomes", () ->
         {
             Map<ResourceLocation, Integer> map = new HashMap<>();
             for (List<?> entry : EntitySettingsConfig.getInstance().getGoatSpawnBiomes())
@@ -373,10 +374,10 @@ public class ConfigSettings
         HEARTH_SPREAD_WHITELIST = addSyncedSetting("hearth_spread_whitelist", () -> ConfigHelper.getBlocks(ColdSweatConfig.getInstance().getHearthSpreadWhitelist().toArray(new String[0])),
         encoder ->
         {
-            CompoundTag tag = new CompoundTag();
-            ListTag list = new ListTag();
+            CompoundNBT tag = new CompoundNBT();
+            ListNBT list = new ListNBT();
             for (Block entry : encoder)
-            {   list.add(StringTag.valueOf(ForgeRegistries.BLOCKS.getKey(entry).toString()));
+            {   list.add(StringNBT.valueOf(ForgeRegistries.BLOCKS.getKey(entry).toString()));
             }
             tag.put("HearthWhitelist", list);
             return tag;
@@ -384,20 +385,20 @@ public class ConfigSettings
         decoder ->
         {
             List<Block> list = new ArrayList<>();
-            for (Tag entry : decoder.getList("HearthWhitelist", 8))
+            for (INBT entry : decoder.getList("HearthWhitelist", 8))
             {   list.add(ForgeRegistries.BLOCKS.getValue(new ResourceLocation(entry.getAsString())));
             }
             return list;
         },
-        saver -> ColdSweatConfig.getInstance().setHearthSpreadWhitelist(saver.stream().map(ForgeRegistries.BLOCKS::getKey).toList()));
+        saver -> ColdSweatConfig.getInstance().setHearthSpreadWhitelist(saver.stream().map(ForgeRegistries.BLOCKS::getKey).collect(Collectors.toList())));
 
         HEARTH_SPREAD_BLACKLIST = addSyncedSetting("hearth_spread_blacklist", () -> ConfigHelper.getBlocks(ColdSweatConfig.getInstance().getHearthSpreadBlacklist().toArray(new String[0])),
         encoder ->
         {
-            CompoundTag tag = new CompoundTag();
-            ListTag list = new ListTag();
+            CompoundNBT tag = new CompoundNBT();
+            ListNBT list = new ListNBT();
             for (Block entry : encoder)
-            {   list.add(StringTag.valueOf(ForgeRegistries.BLOCKS.getKey(entry).toString()));
+            {   list.add(StringNBT.valueOf(ForgeRegistries.BLOCKS.getKey(entry).toString()));
             }
             tag.put("HearthBlacklist", list);
             return tag;
@@ -405,12 +406,12 @@ public class ConfigSettings
         decoder ->
         {
             List<Block> list = new ArrayList<>();
-            for (Tag entry : decoder.getList("HearthBlacklist", 8))
+            for (INBT entry : decoder.getList("HearthBlacklist", 8))
             {   list.add(ForgeRegistries.BLOCKS.getValue(new ResourceLocation(entry.getAsString())));
             }
             return list;
         },
-        saver -> ColdSweatConfig.getInstance().setHearthSpreadBlacklist(saver.stream().map(ForgeRegistries.BLOCKS::getKey).toList()));
+        saver -> ColdSweatConfig.getInstance().setHearthSpreadBlacklist(saver.stream().map(ForgeRegistries.BLOCKS::getKey).collect(Collectors.toList())));
 
         boolean ssLoaded = CompatManager.isSereneSeasonsLoaded();
         SUMMER_TEMPS = addSetting("summer_temps", ssLoaded ? () -> WorldSettingsConfig.getInstance().getSummerTemps() : () -> new Double[3]);
@@ -421,7 +422,7 @@ public class ConfigSettings
 
     public enum Difficulty
     {
-        SUPER_EASY(Map.of(
+        SUPER_EASY(CSMath.mapOf(
             "min_temp", () -> CSMath.convertTemp(40, Temperature.Units.F, Temperature.Units.MC, true),
             "max_temp", () -> CSMath.convertTemp(120, Temperature.Units.F, Temperature.Units.MC, true),
             "temp_rate", () -> 0.5,
@@ -431,7 +432,7 @@ public class ConfigSettings
             "damage_scaling", () -> false
         )),
 
-        EASY(Map.of(
+        EASY(CSMath.mapOf(
             "min_temp", () -> CSMath.convertTemp(45, Temperature.Units.F, Temperature.Units.MC, true),
             "max_temp", () -> CSMath.convertTemp(110, Temperature.Units.F, Temperature.Units.MC, true),
             "temp_rate", () -> 0.75,
@@ -441,7 +442,7 @@ public class ConfigSettings
             "damage_scaling", () -> false
         )),
 
-        NORMAL(Map.of(
+        NORMAL(CSMath.mapOf(
             "min_temp", () -> CSMath.convertTemp(50, Temperature.Units.F, Temperature.Units.MC, true),
             "max_temp", () -> CSMath.convertTemp(100, Temperature.Units.F, Temperature.Units.MC, true),
             "temp_rate", () -> 1.0,
@@ -451,7 +452,7 @@ public class ConfigSettings
             "damage_scaling", () -> true
         )),
 
-        HARD(Map.of(
+        HARD(CSMath.mapOf(
             "min_temp", () -> CSMath.convertTemp(60, Temperature.Units.F, Temperature.Units.MC, true),
             "max_temp", () -> CSMath.convertTemp(90, Temperature.Units.F, Temperature.Units.MC, true),
             "temp_rate", () -> 1.5,
@@ -461,7 +462,7 @@ public class ConfigSettings
             "damage_scaling", () -> true
         )),
 
-        CUSTOM(Map.of());
+        CUSTOM(CSMath.mapOf());
 
         private final Map<String, Supplier<?>> settings;
         Difficulty(Map<String, Supplier<?>> settings)
@@ -481,21 +482,21 @@ public class ConfigSettings
         }
     }
 
-    public static <T> ValueSupplier<T> addSyncedSetting(String id, Supplier<T> supplier, Function<T, CompoundTag> writer, Function<CompoundTag, T> reader, Consumer<T> saver)
-    {   ValueSupplier<T> loader = ValueSupplier.synced(supplier, writer, reader, saver);
+    public static <T> ValueHolder<T> addSyncedSetting(String id, Supplier<T> supplier, Function<T, CompoundNBT> writer, Function<CompoundNBT, T> reader, Consumer<T> saver)
+    {   ValueHolder<T> loader = ValueHolder.synced(supplier, writer, reader, saver);
         CONFIG_SETTINGS.put(id, loader);
         return loader;
     }
 
-    public static <T> ValueSupplier<T> addSetting(String id, Supplier<T> supplier)
-    {   ValueSupplier<T> loader = ValueSupplier.of(supplier);
+    public static <T> ValueHolder<T> addSetting(String id, Supplier<T> supplier)
+    {   ValueHolder<T> loader = ValueHolder.of(supplier);
         CONFIG_SETTINGS.put(id, loader);
         return loader;
     }
 
-    public static Map<String, CompoundTag> encode()
+    public static Map<String, CompoundNBT> encode()
     {
-        Map<String, CompoundTag> map = new HashMap<>();
+        Map<String, CompoundNBT> map = new HashMap<>();
         CONFIG_SETTINGS.forEach((key, value) ->
         {   if (value.isSynced())
             {   map.put(key, value.encode());
@@ -504,7 +505,7 @@ public class ConfigSettings
         return map;
     }
 
-    public static void decode(String key, CompoundTag tag)
+    public static void decode(String key, CompoundNBT tag)
     {
         CONFIG_SETTINGS.computeIfPresent(key, (k, value) ->
         {   value.decode(tag);
@@ -522,6 +523,6 @@ public class ConfigSettings
     }
 
     public static void load()
-    {   CONFIG_SETTINGS.values().forEach(ValueSupplier::load);
+    {   CONFIG_SETTINGS.values().forEach(ValueHolder::load);
     }
 }
