@@ -1,7 +1,7 @@
 package dev.momostudios.coldsweat.config;
 
 import dev.momostudios.coldsweat.util.compat.CompatManager;
-import dev.momostudios.coldsweat.util.math.ListBuilder;
+import dev.momostudios.coldsweat.util.serialization.ListBuilder;
 import net.minecraftforge.common.ForgeConfigSpec;
 import net.minecraftforge.fml.ModLoadingContext;
 import net.minecraftforge.fml.loading.FMLPaths;
@@ -9,6 +9,7 @@ import net.minecraftforge.fml.loading.FMLPaths;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.List;
 
 public final class ItemSettingsConfig
@@ -45,43 +46,64 @@ public final class ItemSettingsConfig
                          "Format: [[\"item-id-1\", amount-1], [\"item-id-2\", amount-2], ...etc]");
         boilerItems = BUILDER
                 .defineList("Boiler", ListBuilder.begin(
-                                List.of("minecraft:coal",         37),
-                                List.of("minecraft:charcoal",     37),
-                                List.of("minecraft:coal_block",   333),
-                                List.of("minecraft:magma_block",  333),
-                                List.of("minecraft:lava_bucket",  1000)
+                                Arrays.asList("minecraft:coal",         37),
+                                Arrays.asList("minecraft:charcoal",     37),
+                                Arrays.asList("minecraft:coal_block",   333),
+                                Arrays.asList("minecraft:magma_block",  333),
+                                Arrays.asList("minecraft:lava_bucket",  1000)
                         ).build(),
-                        it -> it instanceof List && ((List<?>) it).get(0) instanceof String && ((List<?>) it).get(1) instanceof Number);
+                        it ->
+                        {
+                            if (it instanceof List<?>)
+                            {   List<?> list = ((List<?>) it);
+                                return list.size() == 2 && list.get(0) instanceof String && list.get(1) instanceof Number;
+                            }
+                            return false;
+                        });
 
         iceboxItems = BUILDER
                 .defineList("Icebox", ListBuilder.begin(
-                                List.of("minecraft:snowball",     37),
-                                List.of("minecraft:clay",         37),
-                                List.of("minecraft:snow_block",   333),
-                                List.of("minecraft:water_bucket", 333),
-                                List.of("minecraft:ice",          333),
-                                List.of("minecraft:packed_ice",   1000)
+                                Arrays.asList("minecraft:snowball",     37),
+                                Arrays.asList("minecraft:clay",         37),
+                                Arrays.asList("minecraft:snow_block",   333),
+                                Arrays.asList("minecraft:water_bucket", 333),
+                                Arrays.asList("minecraft:ice",          333),
+                                Arrays.asList("minecraft:packed_ice",   1000)
                         ).build(),
-                        it -> it instanceof List && ((List<?>) it).get(0) instanceof String && ((List<?>) it).get(1) instanceof Number);
+                        it ->
+                        {
+                            if (it instanceof List<?>)
+                            {   List<?> list = ((List<?>) it);
+                                return list.size() == 2 && list.get(0) instanceof String && list.get(1) instanceof Number;
+                            }
+                            return false;
+                        });
 
         hearthItems = BUILDER
                 .comment("Negative values indicate cold fuel")
                 .defineList("Hearth", ListBuilder.begin(
                                 // Hot
-                                List.of("minecraft:coal",         37),
-                                List.of("minecraft:charcoal",     37),
-                                List.of("minecraft:coal_block",   333),
-                                List.of("minecraft:magma_block",  333),
-                                List.of("minecraft:lava_bucket",  1000),
+                                Arrays.asList("minecraft:coal",         37),
+                                Arrays.asList("minecraft:charcoal",     37),
+                                Arrays.asList("minecraft:coal_block",   333),
+                                Arrays.asList("minecraft:magma_block",  333),
+                                Arrays.asList("minecraft:lava_bucket",  1000),
                                 // Cold
-                                List.of("minecraft:snowball",     -37),
-                                List.of("minecraft:clay",         -37),
-                                List.of("minecraft:snow_block",   -333),
-                                List.of("minecraft:water_bucket", -333),
-                                List.of("minecraft:ice",          -333),
-                                List.of("minecraft:packed_ice",   -1000)
+                                Arrays.asList("minecraft:snowball",     -37),
+                                Arrays.asList("minecraft:clay",         -37),
+                                Arrays.asList("minecraft:snow_block",   -333),
+                                Arrays.asList("minecraft:water_bucket", -333),
+                                Arrays.asList("minecraft:ice",          -333),
+                                Arrays.asList("minecraft:packed_ice",   -1000)
                         ).build(),
-                        it -> it instanceof List && ((List<?>) it).get(0) instanceof String && ((List<?>) it).get(1) instanceof Number);
+                        it ->
+                        {
+                            if (it instanceof List<?>)
+                            {   List<?> list = ((List<?>) it);
+                                return list.size() == 2 && list.get(0) instanceof String && list.get(1) instanceof Number;
+                            }
+                            return false;
+                        });
         blacklistedPotions = BUILDER
                 .comment("Potions containing any of these effects will not be allowed in the hearth",
                          "Format: [\"effect_id\", \"effect_id\", ...etc]")
@@ -108,9 +130,16 @@ public final class ItemSettingsConfig
                 .comment("Defines the items that the Soulspring Lamp can use as fuel and their values",
                         "Format: [\"item-id-1\", \"item-id-2\", ...etc]")
                 .defineList("Fuel Items", ListBuilder.begin(
-                                List.of("cold_sweat:soul_sprout",   4)
+                                    Arrays.asList("cold_sweat:soul_sprout", 4)
                         ).build(),
-                        it -> it instanceof List<?> list && list.size() == 2 && list.get(0) instanceof String && list.get(1) instanceof Number);
+                        it ->
+                        {
+                            if (it instanceof List<?>)
+                            {   List<?> list = ((List<?>) it);
+                                return list.size() == 2 && list.get(0) instanceof String && list.get(1) instanceof Number;
+                            }
+                            return false;
+                        });
 
         soulLampDimensions = BUILDER
                 .comment("Defines the dimensions that the Soulspring Lamp can be used in",
@@ -132,27 +161,34 @@ public final class ItemSettingsConfig
                         "\"cold\": The amount of cold insulation the item provides.",
                         "\"hot\": The amount of heat insulation the item provides.")
                 .defineList("Insulation Ingredients", ListBuilder.begin(
-                                List.of("minecraft:leather_helmet",     4,  4),
-                                List.of("minecraft:leather_chestplate", 6,  6),
-                                List.of("minecraft:leather_leggings",   5,  5),
-                                List.of("minecraft:leather_boots",      4,  4),
-                                List.of("minecraft:leather",            1,  1),
-                                List.of("cold_sweat:hoglin_hide",       0,  2),
-                                List.of("cold_sweat:goat_fur",          2,  0),
-                                List.of("#minecraft:wool",             1.5, 0),
-                                List.of("minecraft:rabbit_hide",        0,  1.5),
-                                List.of("cold_sweat:hoglin_headpiece",  0,  8),
-                                List.of("cold_sweat:hoglin_tunic",      0,  12),
-                                List.of("cold_sweat:hoglin_trousers",   0,  10),
-                                List.of("cold_sweat:hoglin_hooves",     0,  8),
-                                List.of("cold_sweat:goat_fur_cap",      8,  0),
-                                List.of("cold_sweat:goat_fur_parka",    12, 0),
-                                List.of("cold_sweat:goat_fur_pants",    10, 0),
-                                List.of("cold_sweat:goat_fur_boots",    8,  0))
+                                Arrays.asList("minecraft:leather_helmet",     4,  4),
+                                Arrays.asList("minecraft:leather_chestplate", 6,  6),
+                                Arrays.asList("minecraft:leather_leggings",   5,  5),
+                                Arrays.asList("minecraft:leather_boots",      4,  4),
+                                Arrays.asList("minecraft:leather",            1,  1),
+                                Arrays.asList("cold_sweat:hoglin_hide",       0,  2),
+                                Arrays.asList("cold_sweat:goat_fur",          2,  0),
+                                Arrays.asList("#minecraft:wool",             1.5, 0),
+                                Arrays.asList("minecraft:rabbit_hide",        0,  1.5),
+                                Arrays.asList("cold_sweat:hoglin_headpiece",  0,  8),
+                                Arrays.asList("cold_sweat:hoglin_tunic",      0,  12),
+                                Arrays.asList("cold_sweat:hoglin_trousers",   0,  10),
+                                Arrays.asList("cold_sweat:hoglin_hooves",     0,  8),
+                                Arrays.asList("cold_sweat:goat_fur_cap",      8,  0),
+                                Arrays.asList("cold_sweat:goat_fur_parka",    12, 0),
+                                Arrays.asList("cold_sweat:goat_fur_pants",    10, 0),
+                                Arrays.asList("cold_sweat:goat_fur_boots",    8,  0))
                             .addIf(CompatManager.isEnvironmentalLoaded(),
-                                () -> List.of("environmental:yak_hair", 1.5, -1)
+                                () -> Arrays.asList("environmental:yak_hair", 1.5, -1)
                         ).build(),
-                        it -> it instanceof List<?> list && list.size() == 3 && list.get(0) instanceof String && list.get(1) instanceof Number && list.get(2) instanceof Number);
+                        it ->
+                        {
+                            if (it instanceof List<?>)
+                            {   List<?> list = ((List<?>) it);
+                                return list.size() == 3 && list.get(0) instanceof String && list.get(1) instanceof Number && list.get(2) instanceof Number;
+                            }
+                            return false;
+                        });
 
          adaptiveInsulatingItems = BUILDER
                 .comment("Defines insulation items that have the special \"chameleon molt\" effect",
@@ -161,41 +197,55 @@ public final class ItemSettingsConfig
                         "\"insulation\": The amount of insulation the item provides. Will adjust to hot/cold based on the environment.",
                         "\"adaptSpeed\": The speed at which the item adapts to the current temperature. Higher values mean faster adaptation (from 0 to 1).")
                 .defineList("Adaptive Insulation Ingredients", ListBuilder.begin(
-                                List.of("cold_sweat:chameleon_molt", 2, 0.0085)
+                                Arrays.asList("cold_sweat:chameleon_molt", 2, 0.0085)
                             ).build(),
-                        it -> it instanceof List<?> list && list.size() == 3 && list.get(0) instanceof String && list.get(1) instanceof Number && list.get(2) instanceof Number);
+                        it ->
+                        {
+                            if (it instanceof List<?>)
+                            {   List<?> list = ((List<?>) it);
+                                return list.size() == 3 && list.get(0) instanceof String && list.get(1) instanceof Number && list.get(2) instanceof Number;
+                            }
+                            return false;
+                        });
 
         insulatingArmor = BUILDER
                 .comment("Defines the items that provide insulation when worn",
                         "Format: [[\"item_id\", amount], [\"item_id\", amount], ...etc]")
                 .defineList("Insulating Armor", ListBuilder.begin(
-                                List.of("minecraft:leather_helmet",      4,  4),
-                                List.of("minecraft:leather_chestplate",  6,  6),
-                                List.of("minecraft:leather_leggings",    5,  5),
-                                List.of("minecraft:leather_boots",       4,  4),
-                                List.of("cold_sweat:hoglin_headpiece",   0,  8),
-                                List.of("cold_sweat:hoglin_tunic",       0,  12),
-                                List.of("cold_sweat:hoglin_trousers",    0,  10),
-                                List.of("cold_sweat:hoglin_hooves",      0,  8),
-                                List.of("cold_sweat:goat_fur_cap",       8,  0),
-                                List.of("cold_sweat:goat_fur_parka",     12, 0),
-                                List.of("cold_sweat:goat_fur_pants",     10, 0),
-                                List.of("cold_sweat:goat_fur_boots",     8,  0))
+                                Arrays.asList("minecraft:leather_helmet",      4,  4),
+                                Arrays.asList("minecraft:leather_chestplate",  6,  6),
+                                Arrays.asList("minecraft:leather_leggings",    5,  5),
+                                Arrays.asList("minecraft:leather_boots",       4,  4),
+                                Arrays.asList("cold_sweat:hoglin_headpiece",   0,  8),
+                                Arrays.asList("cold_sweat:hoglin_tunic",       0,  12),
+                                Arrays.asList("cold_sweat:hoglin_trousers",    0,  10),
+                                Arrays.asList("cold_sweat:hoglin_hooves",      0,  8),
+                                Arrays.asList("cold_sweat:goat_fur_cap",       8,  0),
+                                Arrays.asList("cold_sweat:goat_fur_parka",     12, 0),
+                                Arrays.asList("cold_sweat:goat_fur_pants",     10, 0),
+                                Arrays.asList("cold_sweat:goat_fur_boots",     8,  0))
                             .addIf(CompatManager.isEnvironmentalLoaded(),
-                                () -> List.of("environmental:yak_pants", 7.5, -5)
+                                () -> Arrays.asList("environmental:yak_pants", 7.5, -5)
                         ).build(),
-                        it -> it instanceof List<?> list && list.size() == 3 && list.get(0) instanceof String && list.get(1) instanceof Number && list.get(2) instanceof Number);
+                        it ->
+                        {
+                            if (it instanceof List<?>)
+                            {   List<?> list = ((List<?>) it);
+                                return list.size() == 3 && list.get(0) instanceof String && list.get(1) instanceof Number && list.get(2) instanceof Number;
+                            }
+                            return false;
+                        });
 
         insulationSlots = BUILDER
                 .comment("Defines how many insulation slots armor pieces have",
                          "Format: [head, chest, legs, feet]")
-                .defineList("Insulation Slots", List.of(4, 6, 5, 4),
+                .defineList("Insulation Slots", Arrays.asList(4, 6, 5, 4),
                         it -> it instanceof Number);
 
         insulationBlacklist = BUILDER
                 .comment("Defines wearable items that cannot be insulated",
                         "Format: [\"item_id\", \"item_id\", ...etc]")
-                .defineList("Insulation Blacklist", List.of(),
+                .defineList("Insulation Blacklist", Arrays.asList(),
                         it -> it instanceof String);
 
         BUILDER.pop();
@@ -208,11 +258,18 @@ public final class ItemSettingsConfig
                 .comment("Defines items that affect the player's temperature when consumed",
                         "Format: [[\"item_id\", amount], [\"item_id\", amount], ...etc]",
                         "Negative values are cold foods, positive values are hot foods")
-                .defineList("Temperature-Affecting Foods", List.of
+                .defineList("Temperature-Affecting Foods", Arrays.asList
                                 (
                                         // nothing here
                                 ),
-                        it -> it instanceof List && ((List<?>) it).get(0) instanceof String && ((List<?>) it).get(1) instanceof Number);
+                        it ->
+                        {
+                            if (it instanceof List<?>)
+                            {   List<?> list = ((List<?>) it);
+                                return list.size() == 2 && list.get(0) instanceof String && list.get(1) instanceof Number;
+                            }
+                            return false;
+                        });
         waterskinStrength = BUILDER
                 .comment("Defines the amount a player's body temperature will change by when using a waterskin")
                 .defineInRange("Waterskin Strength", 50, 0, Integer.MAX_VALUE);
