@@ -1,8 +1,9 @@
-package dev.momostudios.coldsweat.util.math;
+package dev.momostudios.coldsweat.util.serialization;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 public class ListBuilder<T>
 {
@@ -39,7 +40,7 @@ public class ListBuilder<T>
      */
     @SafeVarargs
     public final ListBuilder<T> addIf(boolean condition, Supplier<T>... elements)
-    {   if (condition) this.elements.addAll(Arrays.stream(elements).map(Supplier::get).toList());
+    {   if (condition) this.elements.addAll(Arrays.stream(elements).map(Supplier::get).collect(Collectors.toList()));
         return this;
     }
 
